<resources>
    <string name="app_name">Fun Trivia</string>
    <string name="app_name_capital">FUN TRIVIA</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_desc">Challenge yourself against the clock!</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="multiplayer_desc">Compete with your friends!</string>
    <string name="app_icon">App icon</string>
    <string name="player_name">Player Name (max. 15 length)</string>
    <string name="string_length_error">Player Name cannot contain more than 15 characters</string>
    <string name="player_name_2">Player Name:  %s</string>
    <string name="no_of_questions">Number of questions (5 – %d)</string>
    <string name="choose_difficulty">Choose difficulty of questions:</string>
    <string name="any_difficulty">Any Difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="start_quiz">Start Quiz!</string>
    <string name="score">Score: %d</string>
    <string name="score_2">Score: %d of %d</string>
    <string name="timer">Timer</string>
    <string name="time">: %d seconds</string>
    <string name="time_2">%.3f s</string>
    <string name="select_mode">Select Mode</string>
    <string name="enter_details">Enter Details</string>
    <string name="enter_all_details_error">Please enter all the details!</string>
    <string name="more_than_limit_error">Number of questions cannot be more than %d</string>
    <string name="less_than_limit_error">Number of questions cannot be less than 5</string>
    <string name="loading">Question is loading</string>
    <string name="question">Q.%d)  %s</string>
    <string name="option_a">A)  %s</string>
    <string name="option_b">B)  %s</string>
    <string name="option_c">C)  %s</string>
    <string name="option_d">D)  %s</string>
    <string name="progress_lost_warning">All your progress in the quiz so far will be lost. Are you sure you want to leave the quiz?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="accuracy">Accuracy:  %.2f %%</string>
    <string name="performance_stats">PERFORMANCE STATS</string>
    <string name="your_performance">Your Performance</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>
    <string name="unattempted">Unattempted</string>
    <string name="avg_time_per_question_text">Avg. Time / Question</string>
    <string name="avg_time_per_question">Avg. Time/Question: %.3f s</string>
    <string name="warning">Warning</string>
    <string name="result">RESULT</string>
    <string name="rule">RULES</string>
    <string name="rules_details">Each question must be attempted within the allotted time (20 seconds). Negative marking will not be done for unattempted questions. But for incorrect answers, there is negative marking of -2. \nFor correct answers, the amount of score awarded depends on the time taken to answer the question:-
      \n \u2022 If time taken is less than or equal to 5 seconds, then score obtained is 10.
      \n \u2022 If time taken is between 6 to 10 seconds, then score obtained is 8.
      \n \u2022 If time taken is between 11 to 15 seconds, then score obtained is 5.
      \n \u2022 If time taken 16-19 seconds, then score obtained is 3.</string>
    <string name="ok">OK</string>
    <string name="gk">General Knowledge</string>
    <string name="science_and_nature">Science and Nature</string>
    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="history">History</string>
    <string name="geography">Geography</string>
    <string name="choose_category">Choose category of questions</string>
    <string name="next">NEXT</string>
    <string name="category_selection">Category Selection</string>
    <string name="skip">SKIP</string>
    <string name="create_join_room">Create/Join Room</string>
    <string name="create_room">Create Room</string>
    <string name="join_room">Join Room</string>
    <string name="create_room_desc">Create room for your friends to join and compete!</string>
    <string name="join_room_desc">Join your friend\'s room to compete with them!</string>
    <string name="no_of_participants">Number of participants(2–10)</string>
    <string name="less_than_min_participants">Number of participants must be at least 2.</string>
    <string name="more_than_max_participants">Number of participants can be at most 10.</string>
    <string name="room_id">Room id: %s</string>
    <string name="start">START</string>
    <string name="cancel">CANCEL</string>
    <string name="num_of_participants_joined">Waiting for participants to join:- \n%d / %d</string>
    <string name="room_creation_successful">Room created successfully!</string>
    <string name="room_creation_failed">Failed to create the room. Please try again!</string>
    <string name="waiting">Waiting for participants to join.</string>
    <string name="waiting_for_finish">Waiting for others to finish the quiz.</string>
    <string name="enter_room_id">Room ID</string>
    <string name="join">JOIN</string>
    <string name="room_not_exist">Please enter correct Room ID!</string>
    <string name="player_name_exist">Entered player name is already taken!</string>
    <string name="room_join_successful">Room joined successfully!</string>
    <string name="participants_capacity_limit">Participants capacity exceeded! Could not join the room.</string>
    <string name="show_leaderboard">Show Leaderboard</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="refresh">Refresh</string>
    <string name="already_gave_quiz">You already gave the quiz!</string>
</resources>