<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/modeFragment">

    <fragment
        android:id="@+id/modeFragment"
        android:name="com.prateekshah.funtrivia.ModeFragment"
        android:label="@string/select_mode"
        tools:layout="@layout/fragment_mode" >
        <action
            android:id="@+id/action_modeFragment_to_chooseCategoryFragment"
            app:destination="@id/chooseCategoryFragment" />
        <action
            android:id="@+id/action_modeFragment_to_createJoinRoomFragment"
            app:destination="@id/createJoinRoomFragment" />
    </fragment>
    <fragment
        android:id="@+id/questionFragment"
        android:name="com.prateekshah.funtrivia.QuestionFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_question" >
        <action
            android:id="@+id/action_questionFragment_to_performanceFragment"
            app:destination="@id/performanceFragment" />
        <action
            android:id="@+id/action_questionFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="name"
            app:argType="string" />
        <action
            android:id="@+id/action_questionFragment_to_createJoinRoomFragment"
            app:destination="@id/createJoinRoomFragment"
            app:popUpTo="@id/createJoinRoomFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.prateekshah.funtrivia.SettingsFragment"
        android:label="@string/enter_details"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settingsFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
        <action
            android:id="@+id/action_settingsFragment_to_chooseCategoryFragment"
            app:destination="@id/chooseCategoryFragment"
            app:popUpTo="@id/chooseCategoryFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/performanceFragment"
        android:name="com.prateekshah.funtrivia.PerformanceFragment"
        android:label="@string/your_performance"
        tools:layout="@layout/fragment_performance" >
        <action
            android:id="@+id/action_performanceFragment_to_settingsFragment"
            app:destination="@id/settingsFragment"
            app:popUpTo="@id/settingsFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="playerName"
            app:argType="string" />
        <action
            android:id="@+id/action_performanceFragment_to_createJoinRoomFragment"
            app:destination="@id/createJoinRoomFragment"
            app:popUpTo="@id/createJoinRoomFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/chooseCategoryFragment"
        android:name="com.prateekshah.funtrivia.ChooseCategoryFragment"
        android:label="@string/category_selection"
        tools:layout="@layout/fragment_choose_category" >
        <action
            android:id="@+id/action_chooseCategoryFragment_to_settingsFragment"
            app:destination="@id/settingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/createJoinRoomFragment"
        android:name="com.prateekshah.funtrivia.CreateJoinRoomFragment"
        android:label="@string/create_join_room"
        tools:layout="@layout/fragment_create_join_room" >
        <action
            android:id="@+id/action_createJoinRoomFragment_to_chooseCategoryFragment"
            app:destination="@id/chooseCategoryFragment" />
        <action
            android:id="@+id/action_createJoinRoomFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>
</navigation>