<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/rule_heading"
            style="@style/CardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/rule"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rule_details"
            style="@style/CardDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rules_details"
            android:fontFamily="@font/carter_one"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:paddingHorizontal="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/rule_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <android.widget.Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="23dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/purple_background"
            android:fontFamily="@font/carter_one"
            android:paddingHorizontal="16dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rule_details" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>