<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/enter_details"
            style="@style/CardTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/enter_details"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_single_player"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/p_name_text_layout"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/p_name_text_layout"
            style="@style/inputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="20dp"
            android:hint="@string/player_name"
            android:minHeight="48dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_details">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/p_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:fontFamily="@font/carter_one"
                android:inputType="text"
                android:textColor="#455A64"
                android:textSize="18sp"
                tools:text="Lorem" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_room"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/room_id_text_layout"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/room_id_text_layout"
            style="@style/inputLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="10dp"
            android:hint="@string/enter_room_id"
            android:minHeight="48dp"
            android:paddingHorizontal="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/p_name_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/room_id2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:fontFamily="@font/carter_one"
                android:inputType="text"
                android:textColor="#455A64"
                android:textSize="18sp"
                tools:text="3a9F25" />

        </com.google.android.material.textfield.TextInputLayout>

        <android.widget.Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/purple_background"
            android:fontFamily="@font/carter_one"
            android:paddingHorizontal="25dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/join_btn" />

        <android.widget.Button
            android:id="@+id/join_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle"
            android:backgroundTint="@color/purple_background"
            android:fontFamily="@font/carter_one"
            android:paddingHorizontal="35dp"
            android:text="@string/join"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.826"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/room_id_text_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>